# mimuw-mikro

./: Makefile  arm-cortex-m4.txt  big.c  i2c.c  leds_main.c  lis35de.h  meson.build  small_2.c  task_2.c  task_3.c
src/: big.c  config.h  i2c.c  i2c.h  lis35de.h  main.c  small_1.c  small_3.c
